--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,10 @@ button {
     padding: 5px;
     margin: 2px;
     border-radius: 3px;
+    color: #fff;
     cursor: pointer;
+    background-color: #1eb3b3;
+    
 }
 h1 {
     color: #1eb3b3;
@@ -12,10 +15,11 @@ h1 {
 button:focus {
     outline: none;
     border: none;
+
 }
 
 input {
-    border: 1px solid blue;
+    border: 1px solid gray;
     border-radius: 2px;
     padding: 2px;
 }
@@ -28,6 +32,26 @@ li{
 }
 
 .center {
-    display: grid;
-    place-items: center;
+    display: flex;
+    place-content: center;
+}
+
+.app {
+    margin-top: 10%;
+    box-shadow: 0px 1px 13px 51px rgba(0,0,0,0.14);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+p.heading {
+    font-weight: bold;
+    text-decoration: underline;
+}
+.sub-button {
+    margin: 5px;
+    cursor: pointer;
+}
+
+button:disabled {
+    opacity: 0.5;
 }
